--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,16 @@
 body {
-    background-color: #f0f0f0;
     font-family: sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
+    background-color: #f0f0f0;
 }
 
-h1 {
-    color: #333;
+#welcome-screen {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
 }
