--- a/static/style.css
+++ b/static/style.css
@@ -14,3 +14,19 @@ body {
 .hidden {
     display: none;
 }
+
+#game-board {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    width: 500px;
+    height: 500px;
+    border: 2px solid black;
+}
+
+.square {
+    border: 1px solid #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+}
