feat(game): implement player piece (MVP1-S4)

--- a/static/style.css
+++ b/static/style.css
@@ -29,4 +29,13 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 1.2em;
+    position: relative;
+}
+
+.player-piece {
+    width: 30px;
+    height: 30px;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
 }
