--- a/static/style.css
+++ b/static/style.css
@@ -39,3 +39,11 @@ body {
     border-radius: 50%;
     position: absolute;
 }
+
+#turn-indicator {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+    color: blue;
+}
