--- a/static/style.css
+++ b/static/style.css
@@ -65,3 +65,10 @@ body {
     height: 100%;
     pointer-events: none;
 }
+
+#winning-celebration {
+    text-align: center;
+    font-size: 2em;
+    color: green;
+    font-weight: bold;
+}
